syntax="proto3";

option go_package = "./pkg/pb";

package product;

service ProductService {
  rpc HealthCheck(NoParam) returns (HealthCheckResponse) {}
  rpc CreateProduct(CreateProductRequest) returns (CreateProductResponse) {}
  rpc FindOne(FindOneRequest) returns (FindOneResponse) {}
  rpc DecreaseStock(DecreaseStockRequest) returns (DecreaseStockResponse) {}
}

message NoParam{};

message HealthCheckResponse{
  string message = 1;
}

// Create request
message CreateProductRequest {
  string name = 1;
  int64 stock = 2;
  int64 price = 3;
}

message CreateProductResponse {
  int64 status = 1;
  string error = 2;
  int64 id = 3;
}



// FindOne
message FindOneData {
  int64 id = 1;
  string name = 2;
  int64 stock = 3;
  int64 price = 4;
}

message FindOneRequest {
  int64 id = 1;
}

message FindOneResponse {
  int64 status = 1;
  string error = 2;
  FindOneData data = 3;
}

// Decrease Stock
message DecreaseStockRequest {
  int64 id = 1;
  int64 orderId = 2;
  int64 quantity = 3;
}

message DecreaseStockResponse {
  int64 status = 1;
  string error = 2;
}
